tests/sema/fail/v10_fail_u64_large_literal_cast.ep
# COMPILE_FAIL_CONTAINS: integer literal 18446744073709551615 out of range for i64

fun run(): i64 {
    let x: u64 = u64(18446744073709551615)
    ret i64(x)
}

fun main(): void {
    exit(run())
}
